// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should match the snapshot with props 1`] = `
<div>
  <div
    class="list-page"
  >
    <div
      class="list-page__header"
    >
      <h1
        class="list-page__title page-title"
      >
        Article List
      </h1>
    </div>
    <div
      class="list-page__body"
    >
      <nav
        class="list-page__nav"
      >
        <div
          class="search-bar"
        >
          <img
            alt="Search Icon"
            class="search-bar__image"
            src="magnifying-glass-grey.svg"
          />
          <input
            class="search-bar__input"
            placeholder="Search for Article"
            type="text"
            value=""
          />
        </div>
        <a
          href="/addarticle"
        >
          <button
            class="button black round-border large"
          >
            <div
              class="medium-img white-svg"
            >
              <svg>
                pen-icon.svg
              </svg>
            </div>
            <p
              class="text medium-text black"
            >
              Add Article
            </p>
          </button>
        </a>
      </nav>
      <div
        class="card-container"
      >
        <div
          class="card"
        >
          <a
            href="/Testtitleone"
          >
            <img
              class="card__image"
              src="https://firebasestorage.googleapis.com/v0/b/ecf-future-hub.appspot.com/o/cv-pic.jpg?alt=media&token=8f649302-9820-426d-80f2-2337e970fc71"
            />
          </a>
          <p
            class="card__date"
          >
            23 May 2022
          </p>
          <a
            class="card__header"
            href="/Testtitleone"
          >
            <h2
              class="card__title"
            >
              Test title one
            </h2>
            <img
              alt="Arrow Icon"
              class="card__icon"
              src="arrow-upper-right-black.svg"
            />
          </a>
          <p
            class="card__info"
          >
            Lorem ipsum dolor sit amet. Id earum enim eum maxime nihil eos commodi quisquam non amet magnam eum sunt voluptatem et laborum magni.
          </p>
          <ul
            class="categories-menu"
          >
            <li
              class="categories-menu__item categories-menu__item--purple"
            >
              Finance
            </li>
          </ul>
        </div>
        <div
          class="card"
        >
          <a
            href="/Testtitletwo"
          >
            <img
              class="card__image"
              src="https://firebasestorage.googleapis.com/v0/b/ecf-future-hub.appspot.com/o/cv-pic.jpg?alt=media&token=8f649302-9820-426d-80f2-2337e970fc71"
            />
          </a>
          <p
            class="card__date"
          >
            23 May 2022
          </p>
          <a
            class="card__header"
            href="/Testtitletwo"
          >
            <h2
              class="card__title"
            >
              Test title two
            </h2>
            <img
              alt="Arrow Icon"
              class="card__icon"
              src="arrow-upper-right-black.svg"
            />
          </a>
          <p
            class="card__info"
          >
            Lorem ipsum dolor sit amet. Id earum enim eum maxime nihil eos commodi quisquam non amet magnam eum sunt voluptatem et laborum magni.
          </p>
          <ul
            class="categories-menu"
          >
            <li
              class="categories-menu__item categories-menu__item--purple"
            >
              Finance
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it should match the snapshot with props 2`] = `
<div>
  <div
    class="list-page"
  >
    <div
      class="list-page__header"
    >
      <h1
        class="list-page__title page-title"
      >
        Marketplace List
      </h1>
    </div>
    <div
      class="list-page__body"
    >
      <nav
        class="list-page__nav"
      >
        <div
          class="search-bar"
        >
          <img
            alt="Search Icon"
            class="search-bar__image"
            src="magnifying-glass-grey.svg"
          />
          <input
            class="search-bar__input"
            placeholder="Search for Marketplace"
            type="text"
            value=""
          />
        </div>
        <a
          href="/addprize"
        >
          <button
            class="button black round-border large"
          >
            <div
              class="medium-img white-svg"
            >
              <svg>
                pen-icon.svg
              </svg>
            </div>
            <p
              class="text medium-text black"
            >
              Add Marketplace
            </p>
          </button>
        </a>
      </nav>
      <div
        class="card-container"
      >
        <div
          class="card"
        >
          <a
            href="/Earna£5AmazonVoucher"
          >
            <img
              class="card__image"
              src="https://firebasestorage.googleapis.com/v0/b/ecf-future-hub.appspot.com/o/market-place%2Famazon-logo.png?alt=media&token=0c9914b9-b020-421c-acaa-e87ff25be8a0"
            />
          </a>
          <p
            class="card__date"
          />
          <a
            class="card__header"
            href="/Earna£5AmazonVoucher"
          >
            <h2
              class="card__title"
            >
              Earn a £5 Amazon Voucher
            </h2>
            <img
              alt="Arrow Icon"
              class="card__icon"
              src="arrow-upper-right-black.svg"
            />
          </a>
          <p
            class="card__info"
          >
            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
          </p>
          <ul
            class="categories-menu"
          >
            <li
              class="categories-menu__item--marketplace"
            >
              <img
                alt="Icon"
                class="categories-menu__item--icons"
                src="going-up-graph-arrow-grey.svg"
              />
              400
            </li>
            <li
              class="categories-menu__item--marketplace"
            >
              <img
                alt="Icon"
                class="categories-menu__item--icons"
                src="trophy-icon-grey.svg"
              />
              1
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it should match the snapshot without props 1`] = `
<div>
  <div
    class="list-page"
  >
    <div
      class="list-page__header"
    >
      <h1
        class="list-page__title page-title"
      >
        undefined List
      </h1>
    </div>
    <div
      class="list-page__body"
    >
      <nav
        class="list-page__nav"
      >
        <div
          class="search-bar"
        >
          <img
            alt="Search Icon"
            class="search-bar__image"
            src="magnifying-glass-grey.svg"
          />
          <input
            class="search-bar__input"
            placeholder="Search for undefined"
            type="text"
            value=""
          />
        </div>
        <a
          href="/addprize"
        >
          <button
            class="button black round-border large"
          >
            <div
              class="medium-img white-svg"
            >
              <svg>
                pen-icon.svg
              </svg>
            </div>
            <p
              class="text medium-text black"
            >
              Add undefined
            </p>
          </button>
        </a>
      </nav>
      <div
        class="card-container"
      />
    </div>
  </div>
</div>
`;
